Fixed some layout issues

--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -9,16 +9,15 @@
 
     &__navbar {
         height: $navbar-height;
-
-        > .fixed-top {
-            left: $sidebar-default-width;
-
-            @media (max-width: breakpoint-max('md', $grid-breakpoints)) {
-                left: 0;
-            }
-        }
+        position: fixed;
+        top: 0;
+        left: $sidebar-default-width;
+        right: 0;
+        z-index: 1030;
+        background: $body-color;
 
         @media (max-width: breakpoint-max('md', $grid-breakpoints)) {
+            left: 0;
             background: $navbar-background-color;
             border-bottom: 1px solid $navbar-border-color;
         }
@@ -34,7 +33,7 @@
                 width: $sidebar-slim-width;
             }
 
-            &--slim ~ .layout__wrap .layout__navbar > .fixed-top {
+            &--slim ~ .layout__wrap .layout__navbar {
                 left: $sidebar-slim-width;
             }
 
@@ -42,7 +41,7 @@
                 width: 0;
             }
 
-            &--collapsed ~ .layout__wrap .layout__navbar > .fixed-top {
+            &--collapsed ~ .layout__wrap .layout__navbar {
                 left: 0;
             }
         }
@@ -53,6 +52,7 @@
     }
 
     &__content {
+        margin-top: $navbar-height;
         padding: 1.5rem;
 
         @media (max-width: breakpoint-max('md', $grid-breakpoints)) {
